[gd_scene load_steps=7 format=3 uid="uid://b3s7geu12gxp3"]

[ext_resource type="Script" path="res://elements/Weapons/Pistol/weapon_pistol.gd" id="1_7nxjr"]
[ext_resource type="PackedScene" uid="uid://dh8ledrx17bcx" path="res://elements/Weapons/Pistol/pistol_bullet.tscn" id="2_ppf5y"]
[ext_resource type="Texture2D" uid="uid://dmlpnwoah5eqj" path="res://assets/Weapons/Pistol/pistol.png" id="3_j2gao"]

[sub_resource type="Animation" id="Animation_nttqg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(7.5, 0.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_gsfp8"]
resource_name = "pistol_shot"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(0.0647042, 2.07053, 1),
"update": 0,
"values": [Vector2(7.5, 0.5), Vector2(6.525, 0.5), Vector2(7.5, 0.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(0.0647042, 2.07053, 1),
"update": 0,
"values": [0.0, -0.174533, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2l2xe"]
_data = {
"RESET": SubResource("Animation_nttqg"),
"pistol_shot": SubResource("Animation_gsfp8")
}

[node name="Weapon_Pistol" type="Node2D"]
script = ExtResource("1_7nxjr")
bullet_scene = ExtResource("2_ppf5y")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(7.5, 0.5)
texture = ExtResource("3_j2gao")

[node name="Pos2D" type="Marker2D" parent="."]
position = Vector2(18, -1)

[node name="Timer" type="Timer" parent="."]
wait_time = 0.378

[node name="ReloadTimer" type="Timer" parent="."]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_2l2xe")
}

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="ReloadTimer" to="." method="_on_reload_timer_timeout"]
